examples/kubernetes/lychee-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: lychee-mysql
  name: lychee-mysql
spec:
  selector:
    app: lychee-mysql
  ports:
  - name: lychee-mysql
    protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: lychee-mysql
  name: lychee-mysql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: lychee-mysql
    spec:
      containers:
      - image: mysql:5.6
        name: lychee-mysql
        ports:
        - containerPort: 3306
          protocol: TCP
