examples/kubernetes/lychee-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: lychee-dev
  name: lychee-dev
spec:
  selector:
    app: lychee-dev
  ports:
  - name: lychee-dev
    protocol: TCP
    port: 80
    targetPort: 8080
